labs/yaml/customers-vs-split.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customers
spec:
  hosts:
    - "customers.default.svc.cluster.local"
  http:
    - match:
        - headers:
            user:
              exact: debug
      route:
        - destination:
            host: customers.default.svc.cluster.local
            port:
              number: 80
            subset: v2
    - route:
        - destination:
            host: customers.default.svc.cluster.local
            port:
              number: 80
            subset: v1
